# prism

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.md  core.md  io.md  ocio-context.md  packaging.md  ui.md
packaging/pyinstaller/: README.md  prism.spec
packaging/pyinstaller/hooks/: hook-colour.py
samples/LUTs/3D/channel_separation/: cdl_offset_power_split_33.cube  cdl_slope_power_skew_33.cube
samples/LUTs/3D/colorspace/: linp3_to_lin2020_17.cube  srgbenc_to_aces2065_33.cube
samples/LUTs/3D/display_view/: acescg_to_displayp3_view.spi3d  acescg_to_srgb_displayview_33.cube  lin709_to_srgb_displayview_33.cube
samples/LUTs/3D/tone_shaping/: ARRI-LogC4.cube  RED-Log3G10.cube  SONY-SLog3.cube
samples/LUTs/formats/csp/: aces2065_to_acescg_33.csp
samples/media/mov/: gained_colorbars.mov
samples/media/sequences/: lifted_colorbars.1001.exr  lifted_colorbars.1002.exr  lifted_colorbars.1003.exr  lifted_colorbars.1004.exr  lifted_colorbars.1005.exr  lifted_colorbars.1006.exr  lifted_colorbars.1007.exr  lifted_colorbars.1008.exr  lifted_colorbars.1009.exr  lifted_colorbars.1010.exr
samples/media/still/sRGB_patterns/: blue.exr  (+5 more)
samples/ocio_config/: cg-config-v4.0.0_aces-v2.0_ocio-v2.5.ocio
src/prism/: __init__.py  main.py
src/prism/core/: __init__.py  frame_cache.py  frame_service.py  frame_source.py  lut_interpolation.py  lut_volume_camera.py  lut_volume_projection.py  ocio_processor.py  scope_waveform.py  scope_waveform_science.py  source_models.py  ui_tokens.py  viewer_state.py
src/prism/io/: __init__.py  image_loader.py  lut_loader.py  ocio_config.py  source_detect.py
src/prism/ui/: __init__.py  compare_view.py  context_variables_dock.py  context_variables_panel.py  lut_inspection_window.py  lut_plot_widget.py  lut_volume_gl_widget.py  lut_volume_widget.py  main_window.py  status_formatters.py  view_math.py  waveform_plot_widget.py  waveform_window.py
tests/: test_compare_view_logic.py  test_frame_service.py  test_lut_analysis.py  test_lut_inspection_window_logic.py  test_lut_interpolation.py  test_lut_loader.py  test_lut_volume_camera.py  test_lut_volume_gl_widget_logic.py  test_lut_volume_projection.py  test_lut_volume_widget_logic.py  test_main_entrypoint.py  test_main_window_logic.py  test_movie_loader.py  test_ocio_config.py  test_ocio_processor.py  test_scope_waveform.py  test_scope_waveform_science.py  test_sequence_loader.py  test_source_detect.py  test_status_formatters.py  test_ui_tokens.py  test_view_math_geometry.py  test_waveform_plot_widget_logic.py  test_waveform_window_logic.py
tools/: build_pyinstaller.py
(+16 files in other folders)
