[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-viewer"
version = "1.2.0"
description = "OCIO still-image viewer for A/B comparison"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.15"
dependencies = [
    "PySide6",
    "colour-science>=0.4.7,<0.5",
    "opencv-python",
    "OpenImageIO",
    "OpenColorIO",
    "numpy",
    "scipy>=1.17,<2",
]

[project.scripts]
prism = "prism.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"prism.ui" = ["assets/icons/*.png", "assets/icons/*.ico", "assets/images/*.png"]

[tool.setuptools.dynamic]
version = {attr = "prism.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/prism/core", "src/prism/io"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["PySide6.*", "OpenImageIO", "PyOpenColorIO", "cv2", "imageio.*", "scipy.*"]
ignore_missing_imports = true
